# youtube-agent

./: .gitignore  README.md  main.py  pyproject.toml  youtube_agent_mvp.py  youtube_agent_mvp_baseline.py
agents/: __init__.py  agent-engineering-tool-calling.code-workspace  coordinator.py  mcp_client.py  tool_interfaces.py
config/: __init__.py  settings.py
mcp_integration/: __init__.py  analysis_layer.py  ephemeral_manager.py  tool_registry.py  youtube_mcp_server.py
tests/: test_mcp_integration.py
tests/integration/: test_modular_integration.py  test_ui_workflow.py
tests/unit/: test_mcp_client.py  test_mcp_property_based.py  test_mcp_server.py  test_ui_components.py  test_video_search.py
tools/: __init__.py  knowledge_base.py  transcript_manager.py  vector_database.py  video_search.py
ui/streamlit/: dashboard.py  streamlit_runner.py
